--- a/_sass/_profile.scss
+++ b/_sass/_profile.scss
@@ -38,6 +38,6 @@
 
 .social {
     border-top: 1px solid $grey-color-light;
-    margin-top: 50px;
-    padding-top: 20px;
+    margin-top: 30px;
+    padding-top: 0;
 }
